re-add tuning code to train notebook

--- a/train.ipynb
+++ b/train.ipynb
@@ -98,7 +98,16 @@
     "    trainer.train(path,\n",
     "                    learning_rate=0.05,\n",
     "                    mini_batch_size=32,\n",
-    "                    max_epochs=25)"
+    "                    max_epochs=25)\n",
+    "    \n",
+    "    # tuning learning rate - all produced lower scores than 0.05\n",
+    "    learning_rates = [0.01, 0.005, 0.0025, 0.001]\n",
+    "    for lr in learning_rates:\n",
+    "        path = '/home/model-lr-' + str(lr)\n",
+    "        trainer.train(path,\n",
+    "                      learning_rate=lr,\n",
+    "                      mini_batch_size=32,\n",
+    "                      max_epochs=25)"
    ]
   }
  ],
